[gd_scene load_steps=7 format=3 uid="uid://bt33j5dwxano3"]

[ext_resource type="Texture2D" uid="uid://bacqucona7fm3" path="res://assets/top_ui.png" id="1_j7odh"]
[ext_resource type="Script" uid="uid://pvllt7hbni2e" path="res://scripts/top_ui.gd" id="2_0qkha"]
[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="2_pei76"]

[sub_resource type="LabelSettings" id="LabelSettings_yrpvj"]
font = ExtResource("2_pei76")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_8bjlm"]
font = ExtResource("2_pei76")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_sh3ln"]
font_size = 19

[node name="top_ui" type="TextureRect"]
offset_right = 576.0
offset_bottom = 192.0
texture = ExtResource("1_j7odh")
script = ExtResource("2_0qkha")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 596.0
offset_bottom = 90.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="score_label" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "000"
label_settings = SubResource("LabelSettings_yrpvj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="counter_label" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(116, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "00"
label_settings = SubResource("LabelSettings_8bjlm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="target_label" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_pei76")
text = "Meta:"
label_settings = SubResource("LabelSettings_sh3ln")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
